--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
         "@shopify/app-bridge-react": "^2.0.2",
         "@shopify/app-bridge-utils": "^2.0.2",
         "@shopify/polaris": "^6.4.0",
+        "alpinejs": "^3.9.6",
         "axios": "^0.21",
         "graphql": "^15.5.0",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-        "react-refresh": "^0.11.0"
+        "autoprefixer": "^10.4.4",
+        "postcss": "^8.4.12",
+        "react-refresh": "^0.11.0",
+        "tailwindcss": "^3.0.23"
     }
 }
